--- a/garden-shop/dev/detail.html
+++ b/garden-shop/dev/detail.html
@@ -4,6 +4,7 @@
 @@include('components/detail-block/detail-block.html')
 @@include('components/additional/additional.html')
 @@include('components/text-block/text-block.html')
+@@include('components/video-review/video-review.html')
 @@include('components/table-info/table-info.html', {title:'Характеристики Shifeng SF-240В'})
 @@include('components/review/review.html')
 <section class="section">
