--- a/garden-shop/release/detail.html
+++ b/garden-shop/release/detail.html
@@ -11,6 +11,9 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="favicon.png" />
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
+	<script src="https://code.jquery.com/jquery-3.7.0.js"
+		integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+	<script src='https://unpkg.com/spritespin@x.x.x/release/spritespin.js' type='text/javascript'></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
 	<link rel="stylesheet" href="css/vanilla-calendar.min.css" />
@@ -18,6 +21,10 @@
 	<link rel="stylesheet" href="css/rSlider.min.css" />
 	<link rel="stylesheet" href="css/style-result.css" />
 
+
+	<script src="https://code.jquery.com/jquery-3.7.0.js"
+		integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+	<sc ript src='https://unpkg.com/spritespin@x.x.x/release/spritespin.js' type='text/javascript'></sc ript>
 	<script src="./js/vanilla-calendar.min.js"></script>
 	<script src="https://unpkg.com/imask"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
@@ -485,7 +492,8 @@
                 <div class="detail-block__slider swiper">
                     <div class="detail-block__stickers">
                         <div class="detail-block__sticker orange-text  demibold">-00%</div>
-                        <div class="detail-block__sticker detail-block__sticker_green green-text demibold">3D</div>
+                        <div class="detail-block__sticker detail-block__sticker_green green-text demibold btn-3d">
+                            3D</div>
                     </div>
                     <div class="detail-block__slider-wrapper swiper-wrapper">
                         <div class="detail-block__slide swiper-slide">
@@ -1565,6 +1573,135 @@
                     </p>
                 </div>
                 <div class="read-more__btn orange-text" data-toggle-text="Скрыть">Читать еще</div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="section video-review">
+    <div class="container">
+        <div class="video-review__title title">Видеообзор</div>
+        <div class="video-review__wrapper">
+            <div class="video-review__slider swiper">
+                <div class="video-review__slider-wrapper swiper-wrapper">
+                    <div class="video-review__slide swiper-slide">
+                        <a href="https://www.youtube.com/watch?v=jfKfPfyJRdk" data-fancybox class="video-link">
+                            <div class="video-link__play">
+                                <svg width="120" height="120" viewBox="0 0 120 120" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M117.388 31.3065C116.012 26.1359 112.994 21.7595 107.824 20.383C98.4529 17.8771 60 17.6477 60 17.6477C60 17.6477 21.5471 17.8771 12.1765 20.383C7.00588 21.7595 4.00588 26.1359 2.61176 31.3065C0.105882 40.6771 0 60.0006 0 60.0006C0 60.0006 0.105882 79.3242 2.61176 88.6948C3.98824 93.8654 7.00588 98.2418 12.1765 99.6183C21.5471 102.124 60 102.354 60 102.354C60 102.354 98.4529 102.124 107.824 99.6183C112.994 98.2418 116.012 93.8654 117.388 88.6948C119.894 79.3242 120 60.0006 120 60.0006C120 60.0006 119.894 40.6771 117.388 31.3065Z"
+                                        fill="#FF0000" />
+                                    <path d="M79.4131 59.9986L47.6484 42.3516V77.6457" fill="white" />
+                                </svg>
+                            </div>
+                            <img src="./images/video-review.png" alt="img">
+                        </a>
+                    </div>
+                    <div class="video-review__slide swiper-slide">
+                        <a href="https://www.youtube.com/watch?v=jfKfPfyJRdk" data-fancybox class="video-link">
+                            <div class="video-link__play">
+                                <svg width="120" height="120" viewBox="0 0 120 120" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M117.388 31.3065C116.012 26.1359 112.994 21.7595 107.824 20.383C98.4529 17.8771 60 17.6477 60 17.6477C60 17.6477 21.5471 17.8771 12.1765 20.383C7.00588 21.7595 4.00588 26.1359 2.61176 31.3065C0.105882 40.6771 0 60.0006 0 60.0006C0 60.0006 0.105882 79.3242 2.61176 88.6948C3.98824 93.8654 7.00588 98.2418 12.1765 99.6183C21.5471 102.124 60 102.354 60 102.354C60 102.354 98.4529 102.124 107.824 99.6183C112.994 98.2418 116.012 93.8654 117.388 88.6948C119.894 79.3242 120 60.0006 120 60.0006C120 60.0006 119.894 40.6771 117.388 31.3065Z"
+                                        fill="#FF0000" />
+                                    <path d="M79.4131 59.9986L47.6484 42.3516V77.6457" fill="white" />
+                                </svg>
+                            </div>
+                            <img src="./images/video-review.png" alt="img">
+                        </a>
+                    </div>
+                    <div class="video-review__slide swiper-slide">
+                        <a href="https://www.youtube.com/watch?v=jfKfPfyJRdk" data-fancybox class="video-link">
+                            <div class="video-link__play">
+                                <svg width="120" height="120" viewBox="0 0 120 120" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M117.388 31.3065C116.012 26.1359 112.994 21.7595 107.824 20.383C98.4529 17.8771 60 17.6477 60 17.6477C60 17.6477 21.5471 17.8771 12.1765 20.383C7.00588 21.7595 4.00588 26.1359 2.61176 31.3065C0.105882 40.6771 0 60.0006 0 60.0006C0 60.0006 0.105882 79.3242 2.61176 88.6948C3.98824 93.8654 7.00588 98.2418 12.1765 99.6183C21.5471 102.124 60 102.354 60 102.354C60 102.354 98.4529 102.124 107.824 99.6183C112.994 98.2418 116.012 93.8654 117.388 88.6948C119.894 79.3242 120 60.0006 120 60.0006C120 60.0006 119.894 40.6771 117.388 31.3065Z"
+                                        fill="#FF0000" />
+                                    <path d="M79.4131 59.9986L47.6484 42.3516V77.6457" fill="white" />
+                                </svg>
+                            </div>
+                            <img src="./images/video-review.png" alt="img">
+                        </a>
+                    </div>
+                    <div class="video-review__slide swiper-slide">
+                        <a href="https://www.youtube.com/watch?v=jfKfPfyJRdk" data-fancybox class="video-link">
+                            <div class="video-link__play">
+                                <svg width="120" height="120" viewBox="0 0 120 120" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M117.388 31.3065C116.012 26.1359 112.994 21.7595 107.824 20.383C98.4529 17.8771 60 17.6477 60 17.6477C60 17.6477 21.5471 17.8771 12.1765 20.383C7.00588 21.7595 4.00588 26.1359 2.61176 31.3065C0.105882 40.6771 0 60.0006 0 60.0006C0 60.0006 0.105882 79.3242 2.61176 88.6948C3.98824 93.8654 7.00588 98.2418 12.1765 99.6183C21.5471 102.124 60 102.354 60 102.354C60 102.354 98.4529 102.124 107.824 99.6183C112.994 98.2418 116.012 93.8654 117.388 88.6948C119.894 79.3242 120 60.0006 120 60.0006C120 60.0006 119.894 40.6771 117.388 31.3065Z"
+                                        fill="#FF0000" />
+                                    <path d="M79.4131 59.9986L47.6484 42.3516V77.6457" fill="white" />
+                                </svg>
+                            </div>
+                            <img src="./images/video-review.png" alt="img">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="video-review__subslider swiper">
+                <div class="video-review__subslider-wrapper swiper-wrapper">
+                    <div class="video-review__subslide swiper-slide">
+                        <a href="https://www.youtube.com/watch?v=jfKfPfyJRdk" data-fancybox class="video-link">
+                            <div class="video-link__play">
+                                <svg width="120" height="120" viewBox="0 0 120 120" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M117.388 31.3065C116.012 26.1359 112.994 21.7595 107.824 20.383C98.4529 17.8771 60 17.6477 60 17.6477C60 17.6477 21.5471 17.8771 12.1765 20.383C7.00588 21.7595 4.00588 26.1359 2.61176 31.3065C0.105882 40.6771 0 60.0006 0 60.0006C0 60.0006 0.105882 79.3242 2.61176 88.6948C3.98824 93.8654 7.00588 98.2418 12.1765 99.6183C21.5471 102.124 60 102.354 60 102.354C60 102.354 98.4529 102.124 107.824 99.6183C112.994 98.2418 116.012 93.8654 117.388 88.6948C119.894 79.3242 120 60.0006 120 60.0006C120 60.0006 119.894 40.6771 117.388 31.3065Z"
+                                        fill="#FF0000" />
+                                    <path d="M79.4131 59.9986L47.6484 42.3516V77.6457" fill="white" />
+                                </svg>
+                            </div>
+                            <img src="./images/video-review.png" alt="img">
+                        </a>
+                    </div>
+                    <div class="video-review__subslide swiper-slide">
+                        <a href="https://www.youtube.com/watch?v=jfKfPfyJRdk" data-fancybox class="video-link">
+                            <div class="video-link__play">
+                                <svg width="120" height="120" viewBox="0 0 120 120" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M117.388 31.3065C116.012 26.1359 112.994 21.7595 107.824 20.383C98.4529 17.8771 60 17.6477 60 17.6477C60 17.6477 21.5471 17.8771 12.1765 20.383C7.00588 21.7595 4.00588 26.1359 2.61176 31.3065C0.105882 40.6771 0 60.0006 0 60.0006C0 60.0006 0.105882 79.3242 2.61176 88.6948C3.98824 93.8654 7.00588 98.2418 12.1765 99.6183C21.5471 102.124 60 102.354 60 102.354C60 102.354 98.4529 102.124 107.824 99.6183C112.994 98.2418 116.012 93.8654 117.388 88.6948C119.894 79.3242 120 60.0006 120 60.0006C120 60.0006 119.894 40.6771 117.388 31.3065Z"
+                                        fill="#FF0000" />
+                                    <path d="M79.4131 59.9986L47.6484 42.3516V77.6457" fill="white" />
+                                </svg>
+                            </div>
+                            <img src="./images/video-review.png" alt="img">
+                        </a>
+                    </div>
+                    <div class="video-review__subslide swiper-slide">
+                        <a href="https://www.youtube.com/watch?v=jfKfPfyJRdk" data-fancybox class="video-link">
+                            <div class="video-link__play">
+                                <svg width="120" height="120" viewBox="0 0 120 120" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M117.388 31.3065C116.012 26.1359 112.994 21.7595 107.824 20.383C98.4529 17.8771 60 17.6477 60 17.6477C60 17.6477 21.5471 17.8771 12.1765 20.383C7.00588 21.7595 4.00588 26.1359 2.61176 31.3065C0.105882 40.6771 0 60.0006 0 60.0006C0 60.0006 0.105882 79.3242 2.61176 88.6948C3.98824 93.8654 7.00588 98.2418 12.1765 99.6183C21.5471 102.124 60 102.354 60 102.354C60 102.354 98.4529 102.124 107.824 99.6183C112.994 98.2418 116.012 93.8654 117.388 88.6948C119.894 79.3242 120 60.0006 120 60.0006C120 60.0006 119.894 40.6771 117.388 31.3065Z"
+                                        fill="#FF0000" />
+                                    <path d="M79.4131 59.9986L47.6484 42.3516V77.6457" fill="white" />
+                                </svg>
+                            </div>
+                            <img src="./images/video-review.png" alt="img">
+                        </a>
+                    </div>
+                    <div class="video-review__subslide swiper-slide">
+                        <a href="https://www.youtube.com/watch?v=jfKfPfyJRdk" data-fancybox class="video-link">
+                            <div class="video-link__play">
+                                <svg width="120" height="120" viewBox="0 0 120 120" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M117.388 31.3065C116.012 26.1359 112.994 21.7595 107.824 20.383C98.4529 17.8771 60 17.6477 60 17.6477C60 17.6477 21.5471 17.8771 12.1765 20.383C7.00588 21.7595 4.00588 26.1359 2.61176 31.3065C0.105882 40.6771 0 60.0006 0 60.0006C0 60.0006 0.105882 79.3242 2.61176 88.6948C3.98824 93.8654 7.00588 98.2418 12.1765 99.6183C21.5471 102.124 60 102.354 60 102.354C60 102.354 98.4529 102.124 107.824 99.6183C112.994 98.2418 116.012 93.8654 117.388 88.6948C119.894 79.3242 120 60.0006 120 60.0006C120 60.0006 119.894 40.6771 117.388 31.3065Z"
+                                        fill="#FF0000" />
+                                    <path d="M79.4131 59.9986L47.6484 42.3516V77.6457" fill="white" />
+                                </svg>
+                            </div>
+                            <img src="./images/video-review.png" alt="img">
+                        </a>
+                    </div>
+                </div>
+                <div class="slider-scrollbar video-review__scrollbar"></div>
+                <div class="slider-pagination video-review__pagination"></div>
             </div>
         </div>
     </div>
